--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Amoor</title>
 
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" type="image/x-icon" href="heart.jpg">
+
 
 </head>
 
@@ -31,7 +33,7 @@
     </div>
 
     <script src="countdown.min.js"></script>
-    <script src="index.js"></script>
+    <script src="index.js?v=1"></script>
 </body>
 
 </html>
