--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h1 id="headline">💘 </h1>
         <div id="countdown">
             <ul>
+                <li><span id="months"></span>meses</li>
                 <li><span id="days"></span>dias</li>
                 <li><span id="hours"></span>horas</li>
                 <li><span id="minutes"></span>minutos</li>
@@ -33,7 +34,7 @@
     </div>
 
     <script src="countdown.min.js"></script>
-    <script src="index.js?v=1"></script>
+    <script src="index.js?v=2"></script>
 </body>
 
 </html>
